initial merge from wiremock 3.0.4 upstream